# FLOCL

clang-tidy/: CMakeLists.txt  ClangTidy.cpp  ClangTidy.h  ClangTidyDiagnosticConsumer.cpp  ClangTidyForceLinker.h  ClangTidyOptions.h  ClangTidyProfiling.cpp
clang-tidy/FPGA/: CMakeLists.txt  FPGATidyModule.cpp  IdDependentBackwardBranchCheck.cpp  IdDependentBackwardBranchCheck.h  KernelNameRestrictionCheck.cpp  KernelNameRestrictionCheck.h  SingleWorkItemBarrierCheck.cpp  SingleWorkItemBarrierCheck.h  StructPackAlignCheck.cpp  StructPackAlignCheck.h  UnrollLoopsCheck.cpp  UnrollLoopsCheck.h
clang-tidy/OpenCL/: CMakeLists.txt  OpenCLTidyModule.cpp  PointerRestrictionsCheck.cpp  PointerRestrictionsCheck.h  PossiblyUnreachableBarrierCheck.cpp  PossiblyUnreachableBarrierCheck.h  RecursionNotSupportedCheck.cpp  RecursionNotSupportedCheck.h
clang-tidy/abseil/: CMakeLists.txt  DurationAdditionCheck.cpp  DurationComparisonCheck.cpp  DurationConversionCastCheck.cpp  DurationDivisionCheck.cpp  DurationRewriter.cpp  DurationRewriter.h  NoInternalDependenciesCheck.cpp  NoInternalDependenciesCheck.h
clang-tidy/altera/: AlteraTidyModule.cpp  CMakeLists.txt  KernelNameRestrictionCheck.cpp  KernelNameRestrictionCheck.h  SingleWorkItemBarrierCheck.cpp  SingleWorkItemBarrierCheck.h  StructPackAlignCheck.cpp  StructPackAlignCheck.h
clang-tidy/android/: CMakeLists.txt  CloexecCheck.cpp  ComparisonInTempFailureRetryCheck.cpp
clang-tidy/boost/: CMakeLists.txt
clang-tidy/bugprone/: CMakeLists.txt  LambdaFunctionNameCheck.cpp  MisplacedWideningCastCheck.cpp  MultipleStatementMacroCheck.cpp  ParentVirtualCallCheck.cpp  SuspiciousMemsetUsageCheck.cpp  UseAfterMoveCheck.cpp
clang-tidy/cert/: CMakeLists.txt  ProperlySeededRandomGeneratorCheck.cpp  StrToNumCheck.cpp
clang-tidy/cppcoreguidelines/: CMakeLists.txt  MacroUsageCheck.cpp  NarrowingConversionsCheck.cpp  ProBoundsArrayToPointerDecayCheck.cpp  ProBoundsPointerArithmeticCheck.cpp  ProBoundsPointerArithmeticCheck.h
clang-tidy/fpga/: CMakeLists.txt  FPGATidyModule.cpp  IdDependentBackwardBranchCheck.cpp  IdDependentBackwardBranchCheck.h  KernelNameRestrictionCheck.cpp  KernelNameRestrictionCheck.h  SingleWorkItemBarrierCheck.cpp  SingleWorkItemBarrierCheck.h  StructPackAlignCheck.cpp  StructPackAlignCheck.h  UnrollLoopsCheck.cpp  UnrollLoopsCheck.h
clang-tidy/fuchsia/: CMakeLists.txt  RestrictSystemIncludesCheck.cpp  TrailingReturnCheck.cpp
clang-tidy/google/: AvoidCStyleCastsCheck.cpp  AvoidThrowingObjCExceptionCheck.cpp  CMakeLists.txt  FunctionNamingCheck.cpp  GlobalVariableDeclarationCheck.cpp
clang-tidy/hicpp/: CMakeLists.txt  ExceptionBaseclassCheck.cpp
clang-tidy/llvm/: CMakeLists.txt  IncludeOrderCheck.cpp
clang-tidy/misc/: CMakeLists.txt  UnusedParametersCheck.cpp
clang-tidy/modernize/: CMakeLists.txt  DeprecatedHeadersCheck.cpp  LoopConvertCheck.cpp  LoopConvertUtils.h  UseDefaultMemberInitCheck.cpp  UseEmplaceCheck.cpp  UseNodiscardCheck.cpp  UseNoexceptCheck.cpp  UseNullptrCheck.cpp  UseOverrideCheck.cpp
clang-tidy/mpi/: CMakeLists.txt
clang-tidy/objc/: AvoidNSErrorInitCheck.cpp  CMakeLists.txt  ForbiddenSubclassingCheck.cpp  PropertyDeclarationCheck.cpp
clang-tidy/opencl/: OpenCLTidyModule.cpp  PossiblyUnreachableBarrierCheck.cpp  PossiblyUnreachableBarrierCheck.h  RecursionNotSupportedCheck.cpp  RecursionNotSupportedCheck.h
clang-tidy/performance/: CMakeLists.txt  (+4 more)
clangd/: CMakeLists.txt  ClangdUnit.cpp
docs/: ReleaseNotes.rst
standalone_build/: CMakeLists.txt  ClangTargets.cmake
unittests/clang-tidy/: CMakeLists.txt
(+58 files in other folders)
